--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -3,6 +3,15 @@ import astroLogo from '../assets/astro.svg';
 import background from '../assets/background.svg';
 ---
 
+<div>
+	<div>
+		<section id="test">
+			<p> Test Item here happening right now</p>
+		</section>
+	</div>
+
+</div>
+
 <div id="container">
 	<img id="background" src={background.src} alt="" fetchpriority="high" />
 	<main>
