--- a/src/components/navbar/Navbar.astro
+++ b/src/components/navbar/Navbar.astro
@@ -1,5 +1,6 @@
 ---
 import Profileicon from "./profileicon/profileicon.astro";
+import SocialIcons from "./socialicons/SocialIcons.astro";
 
 
 
@@ -7,6 +8,9 @@ import Profileicon from "./profileicon/profileicon.astro";
 
 <div class="sticky top-0 z-50 transition delay-75 duration-100 ease-in-out hover:bg-slate-600 backdrop-blur-md bg-transparent">
     <div class="flex">
-        <Profileicon/>    
+        <Profileicon/> 
+    </div>
+    <div>
+        <SocialIcons/>
     </div>
 </div>
