--- a/src/components/navbar/profileicon/profileicon.astro
+++ b/src/components/navbar/profileicon/profileicon.astro
@@ -4,7 +4,7 @@ import profileImage from './profileImg.jpg';
 ---
 
 <div class="p-2 m-0.1">
-    <div class="flex -space-x-2 overflow-hidden">
-        <Image src={profileImage}  height={65} width={65} alt={"A Buffalo Wearing Sunglasses with a synthwave asthetic"} class="object-cover object-center rounded-full border-4 border-green-600 p-1">
+    <div class="flex -space-x-2 overflow-hidden object-center rounded-full ring-2 ring-green-500 drop-shadow-2xl">
+        <Image src={profileImage}  height={65} width={65} alt={"A Buffalo Wearing Sunglasses with a synthwave asthetic"} class="object-center rounded-full p-1" loading={'eager'}>
     </div>
 </div>
