--- a/src/components/education/Education.astro
+++ b/src/components/education/Education.astro
@@ -1,8 +1,10 @@
 ---
+import PreCollege from './precollege/PreCollege.astro'
 ---
 
 <section>
     <div>
+        <PreCollege />
         Education Section Here
     </div>
 </section>
